:tada: Wired back end to the front end successfully

--- a/Store/Store/Store.csproj
+++ b/Store/Store/Store.csproj
@@ -20,6 +20,15 @@
     <Content Remove="ClientApp\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\app\components\order\order.componet.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\components\order\order.componet.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\user\user.component.ts" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
