--- a/Store/Store/appsettings.json
+++ b/Store/Store/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "styles": [
+    "styles.css",
+    "+",
+    "../node_modules/prismjs/themes/prism-okaidia.css"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
