--- a/Store/Store/package.json
+++ b/Store/Store/package.json
@@ -35,6 +35,7 @@
     "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "font-awesome": "^4.7.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jasmine-core": "2.6.4",
@@ -60,6 +61,6 @@
     "zone.js": "0.8.12"
   },
   "dependencies": {
-    "ngx-bootstrap": "^2.0.0-beta.9"
+    "angular2-markdown": "^2.2.0"
   }
 }
