--- a/Store/Store/package.json
+++ b/Store/Store/package.json
@@ -61,6 +61,7 @@
     "zone.js": "0.8.12"
   },
   "dependencies": {
-    "angular2-markdown": "^2.2.0"
+    "angular2-markdown": "^2.2.0",
+    "ngx-bootstrap": "^2.0.0-beta.9"
   }
 }
