:lipstick: Using bootstrap alert class to display messages

--- a/Store/Store/Store.csproj
+++ b/Store/Store/Store.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\app\models\message.ts" />
+    <None Remove="ClientApp\app\models\messageType.ts" />
     <None Remove="ClientApp\app\models\user.ts" />
     <None Remove="ClientApp\app\services\message.service.ts" />
     <None Remove="ClientApp\app\services\order.service.ts" />
@@ -33,6 +35,8 @@
     <TypeScriptCompile Include="ClientApp\app\components\messages\messages.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\order\order.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\user\user.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\message.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\messageType.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\order.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\user.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\message.service.ts" />
