--- a/Store/Store/package.json
+++ b/Store/Store/package.json
@@ -62,6 +62,8 @@
   },
   "dependencies": {
     "angular2-markdown": "^2.2.0",
-    "ngx-bootstrap": "^2.0.0-beta.9"
+    "ngx-bootstrap": "^2.0.0-beta.9",
+    "ngx-filter-pipe": "^1.0.0",
+    "ngx-pagination": "^3.0.3"
   }
 }
